--- a/DAR-Patterns_in_data.html
+++ b/DAR-Patterns_in_data.html
@@ -140,6 +140,7 @@ help(pushups)</code></pre>
 <div id="methods" class="section level1">
 <h1>Methods</h1>
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
+<p>We will be using a boxplot and a numerical dataset to analyze the variables.</p>
 </div>
 <div id="results" class="section level1">
 <h1>Results</h1>
