--- a/DAR-Patterns_in_data.html
+++ b/DAR-Patterns_in_data.html
@@ -155,6 +155,11 @@ a + geom_boxplot()</code></pre>
 <div id="numerical-results" class="section level2">
 <h2>Numerical Results</h2>
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+<pre class="r"><code>favstats(pushups~position,data=pushups)</code></pre>
+<pre><code>##   position min    Q1 median    Q3 max     mean        sd  n missing
+## 1     LINE   6 10.25   14.5 24.25  34 17.12500  9.745878  8       0
+## 2    SKILL  18 31.25   47.5 57.50 108 49.72727 23.036579 22       0</code></pre>
+<p>This numerical dataset shows that the skill players did more pushups than line players.</p>
 </div>
 </div>
 <div id="inferential-results" class="section level1">
