--- a/DAR-Patterns_in_data.html
+++ b/DAR-Patterns_in_data.html
@@ -183,6 +183,7 @@ a + geom_boxplot()</code></pre>
 <div id="discussion-and-conclusion" class="section level1">
 <h1>Discussion and Conclusion</h1>
 <!--State your overall conclusion.  This is also a good place to mention other Research Questions that came to mind as you were carrying out this study.!-->
+<p>The Skills group was significantly better at doing push-ups than the line player group. We get this result with help from the box plot, the numerical dataset, and the t-test.</p>
 </div>
 
 
